analysis/low-level-api-fir/testData/lazyResolve/errors/functionInsideUnnamedObject.kt
class Foo {
    object {
        class Bar {
            fun fo<caret>o() {}
        }
    }
}
